--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -22,6 +22,7 @@ list(APPEND srcs
     ${CMAKE_CURRENT_LIST_DIR}/test_main.cpp
     ${CMAKE_CURRENT_LIST_DIR}/test_os.cpp
     ${CMAKE_CURRENT_LIST_DIR}/test_engine.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/test_model.cpp
 )
 
 list(APPEND include_dirs 
