feat: [model] add detector & classifier

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,9 @@ message(STATUS "SSCMA_ROOT_DIR: ${SSCMA_ROOT_DIR}")
 endif()
 
 if(ESP_PLATFORM)
-include(${SSCMA_ROOT_DIR}/cmake/env_esp.cmake)
+include(${SSCMA_ROOT_DIR}/env_support/cmake/env_esp.cmake)
 elseif(SOPHGO_PLATFORM)
-include(${SSCMA_ROOT_DIR}/cmake/env_sophgo.cmake)
+include(${SSCMA_ROOT_DIR}/env_support/cmake/env_sophgo.cmake)
 else()
-include(${SSCMA_ROOT_DIR}/cmake/env_custom.cmake)
+include(${SSCMA_ROOT_DIR}/env_support/cmake/env_custom.cmake)
 endif()
