--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -27,6 +27,7 @@ list(APPEND srcs
     ${CMAKE_CURRENT_LIST_DIR}/test_data.cpp
     ${CMAKE_CURRENT_LIST_DIR}/test_server.cpp
     ${CMAKE_CURRENT_LIST_DIR}/test_storage.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/test_pipeline.cpp
 )
 
 list(APPEND include_dirs 
