--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,7 +3,6 @@ cmake_minimum_required(VERSION 3.0)
 project(test)
 
 
-
 set(srcs "")
 set(include_dirs "")
 set(private_include_dirs "")
@@ -20,14 +19,14 @@ include(${SSCMA_ROOT_DIR}/CMakeLists.txt)
 
 list(APPEND srcs 
     ${CMAKE_CURRENT_LIST_DIR}/test_main.cpp
-    # ${CMAKE_CURRENT_LIST_DIR}/test_os.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/test_os.cpp
     ${CMAKE_CURRENT_LIST_DIR}/test_codec.cpp
-    # ${CMAKE_CURRENT_LIST_DIR}/test_engine.cpp
-    # ${CMAKE_CURRENT_LIST_DIR}/test_model.cpp
-    # ${CMAKE_CURRENT_LIST_DIR}/test_data.cpp
-    # ${CMAKE_CURRENT_LIST_DIR}/test_server.cpp
-    # ${CMAKE_CURRENT_LIST_DIR}/test_storage.cpp
-    # ${CMAKE_CURRENT_LIST_DIR}/test_pipeline.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/test_engine.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/test_model.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/test_data.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/test_server.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/test_storage.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/test_pipeline.cpp
 )
 
 list(APPEND include_dirs 
