--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -33,6 +33,7 @@ include(math/CMakeLists.txt)
 include(misc/CMakeLists.txt)
 include(utils/CMakeLists.txt)
 include(extension/CMakeLists.txt)
+include(model/CMakeLists.txt)
 
 list(APPEND srcs
     ${CMAKE_CURRENT_LIST_DIR}/test_main.cpp
@@ -51,6 +52,7 @@ list(APPEND srcs
     ${MA_TEST_MISC_SRCS}
     ${MA_TEST_UTILS_SRCS}
     ${MA_TEST_EXTENSION_SRCS}
+    ${MA_TEST_MODEL_SRCS}
 )
 
 list(APPEND include_dirs
