--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,8 @@ endif()
 
 if(ESP_PLATFORM)
 include(${SSCMA_ROOT_DIR}/env_support/cmake/env_esp.cmake)
-elseif(SG200X_PLATFORM)
-include(${SSCMA_ROOT_DIR}/env_support/cmake/env_sg200x.cmake)
+elseif(SOPHGO_PLATFORM)
+include(${SSCMA_ROOT_DIR}/env_support/cmake/env_sophgo.cmake)
 else()
 include(${SSCMA_ROOT_DIR}/env_support/cmake/env_posix.cmake)
 endif()
