--- a/test/extension/CMakeLists.txt
+++ b/test/extension/CMakeLists.txt
@@ -1,5 +1,12 @@
 cmake_minimum_required(VERSION 3.12.4)
+set(srcs)
+set(incs)
+set(files)
 
-file(GLOB test_extension_srcs "${CMAKE_CURRENT_LIST_DIR}/*.cpp")
+file(GLOB srcs "${CMAKE_CURRENT_LIST_DIR}/*.cpp")
 
-set(MA_TEST_EXTENSION_SRCS ${test_extension_srcs})
+add_test(
+        NAME test_extension
+        SRCS ${srcs}
+        INCLUDE_DIRS ${CMAKE_CURRENT_LIST_DIR}
+        EMBED_FILES ${CMAKE_CURRENT_LIST_DIR}/test_data)
