--- a/test/math/CMakeLists.txt
+++ b/test/math/CMakeLists.txt
@@ -1,5 +1,9 @@
 cmake_minimum_required(VERSION 3.12.4)
 
-file(GLOB test_math_srcs "${CMAKE_CURRENT_LIST_DIR}/*.cpp")
+file(GLOB srcs "${CMAKE_CURRENT_LIST_DIR}/*.cpp")
 
-set(MA_TEST_MATH_SRCS ${test_math_srcs})
+add_test(
+        NAME test_math
+        SRCS ${srcs}
+        INCLUDE_DIRS ${CMAKE_CURRENT_LIST_DIR}
+        EMBED_FILES ${files})
