--- a/test/misc/CMakeLists.txt
+++ b/test/misc/CMakeLists.txt
@@ -1,5 +1,10 @@
 cmake_minimum_required(VERSION 3.12.4)
 
-file(GLOB test_misc_srcs "${CMAKE_CURRENT_LIST_DIR}/*.cpp")
+file(GLOB srcs "${CMAKE_CURRENT_LIST_DIR}/*.cpp")
 
-set(MA_TEST_MISC_SRCS ${test_misc_srcs})
+
+add_test(
+        NAME test_misc
+        SRCS ${srcs}
+        INCLUDE_DIRS ${CMAKE_CURRENT_LIST_DIR}
+        EMBED_FILES ${files})
