--- a/test/model/CMakeLists.txt
+++ b/test/model/CMakeLists.txt
@@ -1,5 +1,11 @@
 cmake_minimum_required(VERSION 3.12.4)
 
-file(GLOB test_model_srcs "${CMAKE_CURRENT_LIST_DIR}/*.cpp")
+file(GLOB srcs "${CMAKE_CURRENT_LIST_DIR}/*.cpp")
 
-set(MA_TEST_MODEL_SRCS ${test_model_srcs})
+
+add_test(
+        NAME test_model
+        SRCS ${srcs}
+        INCLUDE_DIRS ${CMAKE_CURRENT_LIST_DIR}
+        
+        EMBED_FILES ${files})
