--- a/test/porting/posix/CMakeLists.txt
+++ b/test/porting/posix/CMakeLists.txt
@@ -1,5 +1,9 @@
 cmake_minimum_required(VERSION 3.12.4)
 
-file(GLOB test_porting_posix_srcs "${CMAKE_CURRENT_LIST_DIR}/*.cpp")
+file(GLOB srcs "${CMAKE_CURRENT_LIST_DIR}/*.cpp")
 
-set(MA_TEST_PORTING_POSIX_SRCS ${test_porting_posix_srcs})
+add_test(
+        NAME test_porting
+        SRCS ${srcs}
+        INCLUDE_DIRS ${CMAKE_CURRENT_LIST_DIR}
+        EMBED_FILES ${files})
