--- a/test/utils/CMakeLists.txt
+++ b/test/utils/CMakeLists.txt
@@ -1,5 +1,9 @@
 cmake_minimum_required(VERSION 3.12.4)
 
-file(GLOB test_utils_srcs "${CMAKE_CURRENT_LIST_DIR}/*.cpp")
+file(GLOB srcs "${CMAKE_CURRENT_LIST_DIR}/*.cpp")
 
-set(MA_TEST_UTILS_SRCS ${test_utils_srcs})
+add_test(
+        NAME test_utils
+        SRCS ${srcs}
+        INCLUDE_DIRS ${CMAKE_CURRENT_LIST_DIR}
+        EMBED_FILES ${CMAKE_CURRENT_LIST_DIR}/test_data)
