--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -75,9 +75,9 @@ endfunction()
 include(core/CMakeLists.txt)
 include(model/CMakeLists.txt)
 include(math/CMakeLists.txt)
-# include(utils/CMakeLists.txt)
-# include(misc/CMakeLists.txt)
-# include(extension/CMakeLists.txt)
+include(utils/CMakeLists.txt)
+include(misc/CMakeLists.txt)
+include(extension/CMakeLists.txt)
 
 
 
