--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -78,8 +78,5 @@ include(math/CMakeLists.txt)
 include(utils/CMakeLists.txt)
 include(misc/CMakeLists.txt)
 include(extension/CMakeLists.txt)
-
-
-
-
+include(porting/posix/CMakeLists.txt)
 
