feat: support himax we2 (#77)
* Fix: NMS tests
* Fix: ByteTrack
* Refactor: Storage LFS
* Refactor: Storage API
* Refactor: Himax WE2 
* Refactor & Fix: LFS, Build Errors
* Fix: Tremendous Build Errors
* Fix: Missing Archive
* Feature: XIP
* Feature: FlashBD Driver
* Fix: Check POD Size Before Cast
* Fix: XIP Should Have Ownership
* Fix: Storage LFS
* Chore: Force LFS Thread Safe, Non-POSIX
* Chore: Check Config Type Before Load Model
* Fix: RTOS Compile Error
* Refactor: Relocate New/Delete to RTOS
* Feature: Transport
* Chore: General Cleanup and Bug Fixes
* Chore: Fix NPU Driver 
* Feature: I2C Support
---------

Co-authored-by: nullptr <nullptr@localhost>

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -75,11 +75,8 @@ endfunction()
 include(core/CMakeLists.txt)
 include(model/CMakeLists.txt)
 include(math/CMakeLists.txt)
-# include(utils/CMakeLists.txt)
-# include(misc/CMakeLists.txt)
-# include(extension/CMakeLists.txt)
-
-
-
-
+include(utils/CMakeLists.txt)
+include(misc/CMakeLists.txt)
+include(extension/CMakeLists.txt)
+include(porting/posix/CMakeLists.txt)
 
