--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -3,7 +3,7 @@ name: build-docs
 on:
   push:
     branches:
-      - dev # should be main later
+      - main
     paths:
       - '.github/workflows/build-docs.yml'
       - 'docs/**'
